# obsidian-cli-ops

./: .STATUS  .eslintrc.js  .gitignore  404.html  CLAUDE.md  CLAUDE.md.backup-20251215  ECOSYSTEM-ANALYSIS.md  GRAPH_BUILDER_TEST_FIXES.md  IDEAS.md  IMPLEMENTATION-ROADMAP.md  KEYBOARD_SHORTCUTS.md  LICENSE  MANUAL_VERIFICATION_TUI.md  MCP_README.md  MIGRATION.md  OPTION_D_IMPLEMENTATION.md  PHASE1-IMPLEMENTATION-PLAN.md  PHASE_4_TUI_PLAN.md  PROJECT_HUB.md  PROJECT_PLAN_v2.0.md  PROPOSAL-A-IMPLEMENTATION.md  PROPOSAL-REFOCUS-2025-12-20.md  README.md  REFOCUS-SUMMARY.md  RELEASE_NOTES_v1.1.0.md  TEST_SUITE_SUMMARY.md  TODOS.md  TUI_TEST_FIXES_SUMMARY.md  V2_QUICKSTART.md  index.html  install.sh  mcp_config.json  mkdocs.yml  package-lock.json  package.json  project-status.json  pyproject.toml  pytest.ini  run_tui.sh  sitemap.xml  (+1 more)
.claude/: settings.local.json
.claude/rules/: architecture.md  skills.md  troubleshooting.md  workflows.md
.claude/sessions/: 2025-12-13_1518.md
.claude/skills/: README.md  checkpoint.md  docs-update.md  session-wrap.md
.github/workflows/: ci.yml  deploy-docs.yml
__tests__/: cli.test.js
ai-setup/: index.html
archive/v2.x/: index.html
completions/: README.md  _obs  obs.bash
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/tui_finalization_20251218/: metadata.json  plan.md  spec.md
config/: example.conf  example.project_map.json
configuration/: index.html
developer/testing/core-tests/: index.html
developer/testing/overview/: index.html
docs/: README.md
docs/developer/: README.md  architecture.md
docs/planning/: CLAUDE_PLUGIN_PROPOSALS.md  README.md  project-hub.md
docs/releases/: v1.1.0.md  v2.2.0.md
docs/user/: README.md
docs/user/guides/: ai-setup.md  (+2 more)
docs_mkdocs/: ai-setup.md  configuration.md  index.md  installation.md  r-dev.md  usage.md  v2.0.md
docs_mkdocs/archive/: v2.x.md
docs_mkdocs/releases/: v1.1.0.md
installation/: index.html
migration/: index.html
r-dev/: index.html
releases/v1.1.0/: index.html
releases/v2.2.0/: index.html
schema/: vault_db.sql
search/: search_index.json
src/: obs.zsh
src/python/: README.md  __init__.py  ai_client.py  ai_client_hf.py  ai_client_ollama.py  db_manager.py  generate_bindings_docs.py  generate_test_vault.py  graph_builder.py  mcp_server.py  obs_cli.py  requirements.txt  setup_wizard.py  similarity_analyzer.py  utils.py  vault_scanner.py
tests/: obs.test.js  test_r_dev.sh
usage/: index.html
v2.0/: index.html
v3.0/: index.html
(+80 files in other folders)
