[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-cli-ops"
version = "2.1.0"
description = "Intelligent CLI for multi-vault Obsidian knowledge management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["obsidian", "cli", "knowledge-management", "graph-analysis", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]

# Core dependencies - minimal footprint
dependencies = [
    "python-frontmatter>=1.0.0",
    "PyYAML>=6.0",
    "networkx>=3.2",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
# AI Providers
gemini = [
    "google-generativeai>=0.8.0",
]
ollama = [
    "numpy>=1.24.0",  # For embedding similarity
]
local = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

# TUI mode
tui = [
    "textual>=0.47.0",
]

# Full installation
all = [
    "obsidian-cli-ops[gemini,ollama,local,tui]",
]

# Development
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
obs-cli = "obs_cli:main"

[project.urls]
Homepage = "https://github.com/Data-Wise/obsidian-cli-ops"
Documentation = "https://data-wise.github.io/obsidian-cli-ops/"
Repository = "https://github.com/Data-Wise/obsidian-cli-ops"
Issues = "https://github.com/Data-Wise/obsidian-cli-ops/issues"

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.setuptools.package-dir]
"" = "src/python"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["src/python/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
